Changes in version 1.2
----------------------

* For feeds containing FeedBurner-specific mark-up, use the origLink element
  for the article URL to avoid FeedBurner redirect URLs.

* Added publisher command line option to specify article cut-off period.

* Better handling of punctuation and Unicode entities.

* Use Porter stemmer to consolidate keywords that derive from the same root.

* More robust image extraction (better exception handling).

* Escape ampersands in URLs.

* Enable templates to detect which articles are new (less than 30 minutes old).


Changes in version 1.1
----------------------

* Allow alternative templates to be specified on the command line, rather than
  requiring them to be added to the classpath.

* Renamed style.css to zeitgeist.css.

* Improved image detection in feeds, now recognises entity-encoded img tags.

* Download and cache thumbnail images and favicons rather than linking to
  originals.

* Improved favicon detection (home page is now downloaded and scanned for link
  tags when there is no favicon.ico in the web root).

* Added expiry meta tag to default templates.