@@ -36,7 +36,7 @@
        branches) that will be tolerated.  This is used to prevent
        regressions in coverage.  The threshold will be raised as
        test coverage improves. -->
-  <property name="minimum.coverage" value="25" />
+  <property name="minimum.coverage" value="35" />
 
 
 
